[package]
name = "tarpc-bench"
version = "0.1.0"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

[dependencies]
byteorder = "1.0"
futures = "0.1.6"
tokio-core = "0.1.1"
tokio-service = "0.1"
tokio-proto = { git = "https://github.com/tokio-rs/tokio-proto" }
net2 = "0.2"

tarpc = {git="https://github.com/google/tarpc.git"}
tarpc-plugins = { git = "https://github.com/google/tarpc" }
#tarpc = { path = "/home/jon/dev/tmp/tarpc-nodelay" }
#tarpc-plugins = { path = "/home/jon/dev/tmp/tarpc-nodelay/src/plugins" }
serde = { version = "0.9" }
serde_derive = { version = "0.9" }
bincode = { git = "https://github.com/tikue/bincode", branch = "faster-byte-buf-deserialization" }
memcached-rs = "0.1.2"

[profile.release]
debug = 1
