[package]
name = "tarpc-bench"
version = "0.1.0"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

[dependencies]
byteorder = "1.0"
futures = "0.1.6"
tokio-core = "0.1.1"
tokio-service = "0.1"
tokio-proto = { git = "https://github.com/tokio-rs/tokio-proto" }
net2 = "0.2"
bincode = "1.0.0-alpha2"

tarpc = {git="https://github.com/jonhoo/tarpc.git", branch="internals"}
tarpc-plugins = {git = "https://github.com/jonhoo/tarpc", branch="internals"}
#tarpc = { path = "/home/jon/dev/tmp/tarpc-nodelay" }
#tarpc-plugins = { path = "/home/jon/dev/tmp/tarpc-nodelay/src/plugins" }
memcached-rs = "0.1.2"

[profile.release]
debug = 1
